authos-demo/k8s/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: authos-demo
  labels:
    app: authos-demo
spec:
  type: ClusterIP
  selector:
    app: authos-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
